{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 332,
  "lineage": "39507220-c5c3-2331-98d0-254c2fdcf9eb",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:loadbalancer/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8",
            "arn_suffix": "app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-e4834c44f0b269573e8ec60188-2058065105.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414444871239:loadbalancer/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-e4834c44f0b269573e8ec60188",
            "name_prefix": "app-",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-01a98d1e32d5a11d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-082031211ef5c2f03"
              },
              {
                "subnet_id": "subnet-0a0b533e07b283dde"
              }
            ],
            "subnets": [
              "subnet-082031211ef5c2f03",
              "subnet-0a0b533e07b283dde"
            ],
            "vpc_id": "vpc-0bdf773c0f2b863d0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:loadbalancer/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8"
          },
          "dependencies": [
            "module.network.aws_subnet.public_1",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/6f4836cb7912b142",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/6f4836cb7912b142",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:loadbalancer/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/6f4836cb7912b142"
          },
          "dependencies": [
            "module.compute.aws_lb.app_alb",
            "module.network.aws_subnet.public_1",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/08821d33aaaf33ad",
            "certificate_arn": "arn:aws:acm:us-east-1:414444871239:certificate/38e2553e-f6e7-4bef-a68d-bf1a1510599f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/app-tg/08aec60ba715c7e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/08821d33aaaf33ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:loadbalancer/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/08821d33aaaf33ad"
          },
          "dependencies": [
            "module.compute.aws_lb.app_alb",
            "module.compute.aws_lb_target_group.app_tg",
            "module.network.aws_subnet.public_1",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/frontend-tg/baf42712cdc5305c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener-rule/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/08821d33aaaf33ad/d05331f76f4476b4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener-rule/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/08821d33aaaf33ad/d05331f76f4476b4",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/08821d33aaaf33ad",
            "priority": 100,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:listener-rule/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8/08821d33aaaf33ad/d05331f76f4476b4"
          },
          "dependencies": [
            "module.compute.aws_lb.app_alb",
            "module.compute.aws_lb_listener.https",
            "module.compute.aws_lb_target_group.app_tg",
            "module.compute.aws_lb_target_group.frontend_tg",
            "module.network.aws_subnet.public_1",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/app-tg/08aec60ba715c7e3",
            "arn_suffix": "targetgroup/app-tg/08aec60ba715c7e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/hello",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/app-tg/08aec60ba715c7e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:414444871239:loadbalancer/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/app-tg/08aec60ba715c7e3"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/frontend-tg/baf42712cdc5305c",
            "arn_suffix": "targetgroup/frontend-tg/baf42712cdc5305c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/frontend-tg/baf42712cdc5305c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:414444871239:loadbalancer/app/app-e4834c44f0b269573e8ec60188/59e58b3cc853f8d8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414444871239:targetgroup/frontend-tg/baf42712cdc5305c"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.data",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:security-group/sg-06203bffa66c40a17",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06203bffa66c40a17",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005b9e0b58ca64b9d"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "terraform-254a70ddeedd52fd44cfb4fec3",
            "name_prefix": "terraform-",
            "owner_id": "414444871239",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "sg-06203bffa66c40a17",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.backend_sg",
            "module.security.aws_security_group.frontend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a59b1f839c26e279",
            "arn": "arn:aws:ec2:us-east-1:414444871239:elastic-ip/eipalloc-0a59b1f839c26e279",
            "association_id": "eipassoc-05d43e1329422388a",
            "domain": "vpc",
            "id": "eipalloc-0a59b1f839c26e279",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07b480bed10d6ffaa",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-18-210-39-226.compute-1.amazonaws.com",
            "public_ip": "18.210.39.226",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "eipalloc-0a59b1f839c26e279",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:internet-gateway/igw-0bbec6644edccfcbf",
            "id": "igw-0bbec6644edccfcbf",
            "owner_id": "414444871239",
            "region": "us-east-1",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "igw-0bbec6644edccfcbf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a59b1f839c26e279",
            "association_id": "eipassoc-05d43e1329422388a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b14e26041ff57ff8",
            "network_interface_id": "eni-07b480bed10d6ffaa",
            "private_ip": "10.0.1.109",
            "public_ip": "18.210.39.226",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082031211ef5c2f03",
            "tags": {
              "Name": "tf-nat"
            },
            "tags_all": {
              "Name": "tf-nat"
            },
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "nat-0b14e26041ff57ff8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a75ea527ed12eed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b14e26041ff57ff8",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01a75ea527ed12eed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01a75ea527ed12eed"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bbec6644edccfcbf",
            "id": "r-rtb-052313f98ed9696eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-052313f98ed9696eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-052313f98ed9696eb"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:route-table/rtb-01a75ea527ed12eed",
            "id": "rtb-01a75ea527ed12eed",
            "owner_id": "414444871239",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b14e26041ff57ff8",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "rtb-01a75ea527ed12eed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:route-table/rtb-052313f98ed9696eb",
            "id": "rtb-052313f98ed9696eb",
            "owner_id": "414444871239",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bbec6644edccfcbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "rtb-052313f98ed9696eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6717f9ec0b0fd20",
            "region": "us-east-1",
            "route_table_id": "rtb-01a75ea527ed12eed",
            "subnet_id": "subnet-02c974e7382994ad1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "rtbassoc-0e6717f9ec0b0fd20",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_1",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039b357dedacdb7ed",
            "region": "us-east-1",
            "route_table_id": "rtb-01a75ea527ed12eed",
            "subnet_id": "subnet-0b7d54d209c6a9bb8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "rtbassoc-039b357dedacdb7ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_2",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ad1c288ae8b0f9e",
            "region": "us-east-1",
            "route_table_id": "rtb-052313f98ed9696eb",
            "subnet_id": "subnet-082031211ef5c2f03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "rtbassoc-08ad1c288ae8b0f9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5bca5455e287deb",
            "region": "us-east-1",
            "route_table_id": "rtb-052313f98ed9696eb",
            "subnet_id": "subnet-0a0b533e07b283dde"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "rtbassoc-0c5bca5455e287deb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:subnet/subnet-02c974e7382994ad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c974e7382994ad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414444871239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "subnet-02c974e7382994ad1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:subnet/subnet-0b7d54d209c6a9bb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7d54d209c6a9bb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414444871239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "subnet-0b7d54d209c6a9bb8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:subnet/subnet-082031211ef5c2f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082031211ef5c2f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414444871239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "subnet-082031211ef5c2f03",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:subnet/subnet-0a0b533e07b283dde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0b533e07b283dde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414444871239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "subnet-0a0b533e07b283dde",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:vpc/vpc-0bdf773c0f2b863d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fbaabdb0758ae109",
            "default_route_table_id": "rtb-0567784e462311ea6",
            "default_security_group_id": "sg-07803cb8db3e89a89",
            "dhcp_options_id": "dopt-0793138880b0a6147",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdf773c0f2b863d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0567784e462311ea6",
            "owner_id": "414444871239",
            "region": "us-east-1",
            "tags": {
              "Name": "maromstream-vpc"
            },
            "tags_all": {
              "Name": "maromstream-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "vpc-0bdf773c0f2b863d0",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:security-group/sg-01a98d1e32d5a11d1",
            "description": "Allow inbound HTTP and HTTPS from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-01a98d1e32d5a11d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "414444871239",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "sg-01a98d1e32d5a11d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:security-group/sg-005b9e0b58ca64b9d",
            "description": "Allow traffic from the frontend tier to the backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-005b9e0b58ca64b9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3fd100698d6ad6b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "414444871239",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "sg-005b9e0b58ca64b9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.frontend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:security-group/sg-0c02c33d886778b15",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c02c33d886778b15",
            "ingress": [],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "414444871239",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "sg-0c02c33d886778b15",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:security-group/sg-0f3fd100698d6ad6b",
            "description": "Allow traffic from the ALB to the frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0f3fd100698d6ad6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a98d1e32d5a11d1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "414444871239",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdf773c0f2b863d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "sg-0f3fd100698d6ad6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "backend_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:security-group-rule/sgr-050f29a235e66935d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27017,
            "id": "sgr-050f29a235e66935d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c02c33d886778b15",
            "region": "us-east-1",
            "security_group_id": "sg-005b9e0b58ca64b9d",
            "security_group_rule_id": "sgr-050f29a235e66935d",
            "tags": null,
            "tags_all": {},
            "to_port": 27017
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "sgr-050f29a235e66935d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.backend_sg",
            "module.security.aws_security_group.db_sg",
            "module.security.aws_security_group.frontend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_from_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414444871239:security-group-rule/sgr-0ec348d43a2a459fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27017,
            "id": "sgr-0ec348d43a2a459fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-005b9e0b58ca64b9d",
            "region": "us-east-1",
            "security_group_id": "sg-0c02c33d886778b15",
            "security_group_rule_id": "sgr-0ec348d43a2a459fa",
            "tags": null,
            "tags_all": {},
            "to_port": 27017
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414444871239",
            "id": "sgr-0ec348d43a2a459fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.backend_sg",
            "module.security.aws_security_group.db_sg",
            "module.security.aws_security_group.frontend_sg"
          ]
        }
      ]
    }
  ]
}